AU-49: added button to violation-menu to fold all nodes that are not involved in any violation

--- a/archunit-visual/src/main/app/report/violation-menu/violation-menu.css
+++ b/archunit-visual/src/main/app/report/violation-menu/violation-menu.css
@@ -45,6 +45,7 @@
 
 .group > div {
     margin-left: 10px;
+    margin-right: 10px;
     padding-bottom: 10px;
 }
 
@@ -73,4 +74,9 @@ button {
 
 .marked {
     border: 1px solid red;
+}
+
+div.buttons > button {
+    margin: 5px;
+    width: 100%;
 }
